extract category class